// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Email Magic Link OTP Only Transformer Tests should add default instructions, otp and warning text when client, app, and intent data are missing from context 1`] = `
Object {
  "data": Object {},
  "dataSchema": Object {
    "fieldsToExclude": [Function],
    "fieldsToTrim": Array [],
    "fieldsToValidate": Array [],
    "submit": Object {
      "step": "challenge-authenticator",
    },
  },
  "schema": Object {},
  "uischema": Object {
    "elements": Array [
      Object {
        "contentType": "subtitle",
        "options": Object {
          "content": "idx.enter.otp.in.original.tab",
          "dataSe": "enter-code-instr",
        },
        "type": "Description",
      },
      Object {
        "noTranslate": true,
        "options": Object {
          "content": "123456",
          "dataSe": "otp-value",
          "level": 3,
          "visualLevel": 3,
        },
        "type": "Heading",
      },
      Object {
        "contentType": "subtitle",
        "options": Object {
          "content": "idx.return.link.otponly.warning.text",
          "dataSe": "otp-warning",
        },
        "type": "Description",
      },
    ],
    "type": "VerticalLayout",
  },
}
`;

exports[`Email Magic Link OTP Only Transformer Tests should add password reset instructions (with recovery intent), otp and warning text when client & app dataare missing from context 1`] = `
Object {
  "data": Object {},
  "dataSchema": Object {
    "fieldsToExclude": [Function],
    "fieldsToTrim": Array [],
    "fieldsToValidate": Array [],
    "submit": Object {
      "step": "challenge-authenticator",
    },
  },
  "schema": Object {},
  "uischema": Object {
    "elements": Array [
      Object {
        "contentType": "subtitle",
        "options": Object {
          "content": "idx.return.link.otponly.enter.code.on.password.reset.page",
          "dataSe": "enter-code-instr",
        },
        "type": "Description",
      },
      Object {
        "noTranslate": true,
        "options": Object {
          "content": "123456",
          "dataSe": "otp-value",
          "level": 3,
          "visualLevel": 3,
        },
        "type": "Heading",
      },
      Object {
        "contentType": "subtitle",
        "options": Object {
          "content": "idx.return.link.otponly.warning.text",
          "dataSe": "otp-warning",
        },
        "type": "Description",
      },
    ],
    "type": "VerticalLayout",
  },
}
`;

exports[`Email Magic Link OTP Only Transformer Tests should add sign up instructions (with enroll intent), otp and warning text when client & app data are missing from context 1`] = `
Object {
  "data": Object {},
  "dataSchema": Object {
    "fieldsToExclude": [Function],
    "fieldsToTrim": Array [],
    "fieldsToValidate": Array [],
    "submit": Object {
      "step": "challenge-authenticator",
    },
  },
  "schema": Object {},
  "uischema": Object {
    "elements": Array [
      Object {
        "contentType": "subtitle",
        "options": Object {
          "content": "idx.return.link.otponly.enter.code.on.sign.up.page",
          "dataSe": "enter-code-instr",
        },
        "type": "Description",
      },
      Object {
        "noTranslate": true,
        "options": Object {
          "content": "123456",
          "dataSe": "otp-value",
          "level": 3,
          "visualLevel": 3,
        },
        "type": "Heading",
      },
      Object {
        "contentType": "subtitle",
        "options": Object {
          "content": "idx.return.link.otponly.warning.text",
          "dataSe": "otp-warning",
        },
        "type": "Description",
      },
    ],
    "type": "VerticalLayout",
  },
}
`;

exports[`Email Magic Link OTP Only Transformer Tests should add sign-in instructions (with auth intent), otp and warning text when client & app data are missing from context 1`] = `
Object {
  "data": Object {},
  "dataSchema": Object {
    "fieldsToExclude": [Function],
    "fieldsToTrim": Array [],
    "fieldsToValidate": Array [],
    "submit": Object {
      "step": "challenge-authenticator",
    },
  },
  "schema": Object {},
  "uischema": Object {
    "elements": Array [
      Object {
        "contentType": "subtitle",
        "options": Object {
          "content": "idx.return.link.otponly.enter.code.on.sign.in.page",
          "dataSe": "enter-code-instr",
        },
        "type": "Description",
      },
      Object {
        "noTranslate": true,
        "options": Object {
          "content": "123456",
          "dataSe": "otp-value",
          "level": 3,
          "visualLevel": 3,
        },
        "type": "Heading",
      },
      Object {
        "contentType": "subtitle",
        "options": Object {
          "content": "idx.return.link.otponly.warning.text",
          "dataSe": "otp-warning",
        },
        "type": "Description",
      },
    ],
    "type": "VerticalLayout",
  },
}
`;

exports[`Email Magic Link OTP Only Transformer Tests should add sign-in instructions, otp, warning and app info only when client data is missing from context 1`] = `
Object {
  "data": Object {},
  "dataSchema": Object {
    "fieldsToExclude": [Function],
    "fieldsToTrim": Array [],
    "fieldsToValidate": Array [],
    "submit": Object {
      "step": "challenge-authenticator",
    },
  },
  "schema": Object {},
  "uischema": Object {
    "elements": Array [
      Object {
        "contentType": "subtitle",
        "options": Object {
          "content": "idx.return.link.otponly.enter.code.on.sign.in.page",
          "dataSe": "enter-code-instr",
        },
        "type": "Description",
      },
      Object {
        "noTranslate": true,
        "options": Object {
          "content": "123456",
          "dataSe": "otp-value",
          "level": 3,
          "visualLevel": 3,
        },
        "type": "Heading",
      },
      Object {
        "contentType": "subtitle",
        "noMargin": true,
        "options": Object {
          "content": "idx.return.link.otponly.request",
          "dataSe": "otp-only-request-info",
        },
        "type": "Description",
      },
      Object {
        "options": Object {
          "SVGIcon": [Function],
          "id": "app",
          "textContent": "idx.return.link.otponly.app",
        },
        "type": "ImageWithText",
      },
      Object {
        "contentType": "subtitle",
        "options": Object {
          "content": "idx.return.link.otponly.warning.text",
          "dataSe": "otp-warning",
        },
        "type": "Description",
      },
    ],
    "type": "VerticalLayout",
  },
}
`;

exports[`Email Magic Link OTP Only Transformer Tests should add sign-in instructions, otp, warning, app info, and browser info and partial location when all data exists except for state in context 1`] = `
Object {
  "data": Object {},
  "dataSchema": Object {
    "fieldsToExclude": [Function],
    "fieldsToTrim": Array [],
    "fieldsToValidate": Array [],
    "submit": Object {
      "step": "challenge-authenticator",
    },
  },
  "schema": Object {},
  "uischema": Object {
    "elements": Array [
      Object {
        "contentType": "subtitle",
        "options": Object {
          "content": "idx.return.link.otponly.enter.code.on.sign.in.page",
          "dataSe": "enter-code-instr",
        },
        "type": "Description",
      },
      Object {
        "noTranslate": true,
        "options": Object {
          "content": "123456",
          "dataSe": "otp-value",
          "level": 3,
          "visualLevel": 3,
        },
        "type": "Heading",
      },
      Object {
        "contentType": "subtitle",
        "noMargin": true,
        "options": Object {
          "content": "idx.return.link.otponly.request",
          "dataSe": "otp-only-request-info",
        },
        "type": "Description",
      },
      Object {
        "options": Object {
          "SVGIcon": [Function],
          "id": "browser",
          "textContent": "idx.return.link.otponly.browser.on.os",
        },
        "type": "ImageWithText",
      },
      Object {
        "options": Object {
          "SVGIcon": [Function],
          "id": "app",
          "textContent": "idx.return.link.otponly.app",
        },
        "type": "ImageWithText",
      },
      Object {
        "options": Object {
          "SVGIcon": [Function],
          "id": "location",
          "textContent": "geolocation.formatting.partial",
        },
        "type": "ImageWithText",
      },
      Object {
        "contentType": "subtitle",
        "options": Object {
          "content": "idx.return.link.otponly.warning.text",
          "dataSe": "otp-warning",
        },
        "type": "Description",
      },
    ],
    "type": "VerticalLayout",
  },
}
`;

exports[`Email Magic Link OTP Only Transformer Tests should add sign-in instructions, otp, warning, app info, and browser info when all data exists except for location in context 1`] = `
Object {
  "data": Object {},
  "dataSchema": Object {
    "fieldsToExclude": [Function],
    "fieldsToTrim": Array [],
    "fieldsToValidate": Array [],
    "submit": Object {
      "step": "challenge-authenticator",
    },
  },
  "schema": Object {},
  "uischema": Object {
    "elements": Array [
      Object {
        "contentType": "subtitle",
        "options": Object {
          "content": "idx.return.link.otponly.enter.code.on.sign.in.page",
          "dataSe": "enter-code-instr",
        },
        "type": "Description",
      },
      Object {
        "noTranslate": true,
        "options": Object {
          "content": "123456",
          "dataSe": "otp-value",
          "level": 3,
          "visualLevel": 3,
        },
        "type": "Heading",
      },
      Object {
        "contentType": "subtitle",
        "noMargin": true,
        "options": Object {
          "content": "idx.return.link.otponly.request",
          "dataSe": "otp-only-request-info",
        },
        "type": "Description",
      },
      Object {
        "options": Object {
          "SVGIcon": [Function],
          "id": "browser",
          "textContent": "idx.return.link.otponly.browser.on.os",
        },
        "type": "ImageWithText",
      },
      Object {
        "options": Object {
          "SVGIcon": [Function],
          "id": "app",
          "textContent": "idx.return.link.otponly.app",
        },
        "type": "ImageWithText",
      },
      Object {
        "contentType": "subtitle",
        "options": Object {
          "content": "idx.return.link.otponly.warning.text",
          "dataSe": "otp-warning",
        },
        "type": "Description",
      },
    ],
    "type": "VerticalLayout",
  },
}
`;

exports[`Email Magic Link OTP Only Transformer Tests should add sign-in instructions, otp, warning, app info, browser info, and location when all expected data exists in context 1`] = `
Object {
  "data": Object {},
  "dataSchema": Object {
    "fieldsToExclude": [Function],
    "fieldsToTrim": Array [],
    "fieldsToValidate": Array [],
    "submit": Object {
      "step": "challenge-authenticator",
    },
  },
  "schema": Object {},
  "uischema": Object {
    "elements": Array [
      Object {
        "contentType": "subtitle",
        "options": Object {
          "content": "idx.return.link.otponly.enter.code.on.sign.in.page",
          "dataSe": "enter-code-instr",
        },
        "type": "Description",
      },
      Object {
        "noTranslate": true,
        "options": Object {
          "content": "123456",
          "dataSe": "otp-value",
          "level": 3,
          "visualLevel": 3,
        },
        "type": "Heading",
      },
      Object {
        "contentType": "subtitle",
        "noMargin": true,
        "options": Object {
          "content": "idx.return.link.otponly.request",
          "dataSe": "otp-only-request-info",
        },
        "type": "Description",
      },
      Object {
        "options": Object {
          "SVGIcon": [Function],
          "id": "browser",
          "textContent": "idx.return.link.otponly.browser.on.os",
        },
        "type": "ImageWithText",
      },
      Object {
        "options": Object {
          "SVGIcon": [Function],
          "id": "app",
          "textContent": "idx.return.link.otponly.app",
        },
        "type": "ImageWithText",
      },
      Object {
        "options": Object {
          "SVGIcon": [Function],
          "id": "location",
          "textContent": "geolocation.formatting.all",
        },
        "type": "ImageWithText",
      },
      Object {
        "contentType": "subtitle",
        "options": Object {
          "content": "idx.return.link.otponly.warning.text",
          "dataSe": "otp-warning",
        },
        "type": "Description",
      },
    ],
    "type": "VerticalLayout",
  },
}
`;

exports[`Email Magic Link OTP Only Transformer Tests should add unlock acct instructions (with unlock intent), otp and warning text when client & app dataare missing from context 1`] = `
Object {
  "data": Object {},
  "dataSchema": Object {
    "fieldsToExclude": [Function],
    "fieldsToTrim": Array [],
    "fieldsToValidate": Array [],
    "submit": Object {
      "step": "challenge-authenticator",
    },
  },
  "schema": Object {},
  "uischema": Object {
    "elements": Array [
      Object {
        "contentType": "subtitle",
        "options": Object {
          "content": "idx.return.link.otponly.enter.code.on.account.unlock.page",
          "dataSe": "enter-code-instr",
        },
        "type": "Description",
      },
      Object {
        "noTranslate": true,
        "options": Object {
          "content": "123456",
          "dataSe": "otp-value",
          "level": 3,
          "visualLevel": 3,
        },
        "type": "Heading",
      },
      Object {
        "contentType": "subtitle",
        "options": Object {
          "content": "idx.return.link.otponly.warning.text",
          "dataSe": "otp-warning",
        },
        "type": "Description",
      },
    ],
    "type": "VerticalLayout",
  },
}
`;
